--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# See https://www.dartlang.org/guides/libraries/private-files
 # https://dart.dev/guides/libraries/private-files
 # Created by `dart pub`
 .dart_tool/
